--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/cli": "^7.17.10",
     "@babel/core": "^7.17.10",
     "@babel/preset-env": "^7.17.10",
+    "babel-jest": "^28.1.0",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "eslint": "^8.14.0",
@@ -29,6 +30,7 @@
     "eslint-plugin-import": "^2.26.0",
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^28.1.0",
     "mini-css-extract-plugin": "^2.6.0",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
